# Nightstream

./: .gitignore  .rustfmt.toml  ADOPTERS.md  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  MAINTAINERS.md  PAPER.md  README.md  SECURITY.md  STRUCTURE.md  TODO.md  bench_rust.sh  bench_sim.py  compare_bench.py  file_aggregator.sh  profile_fib.sh  run_optimized_fib.sh  run_sha256_proper.sh  rust-toolchain.toml  sage_params.sage
.cargo/: config.toml
benchmarks/: Cargo.toml  README.md
benchmarks/benches/: neo_benchmarks.rs
benchmarks/src/: ark_gl.rs  lib.rs  main.rs  util.rs
crates/demo-fold-list/: Cargo.toml
crates/demo-fold-list/src/: main.rs
crates/neo-ccs/: Cargo.toml  README.md
crates/neo-ccs/src/: ccs_sumcheck.rs  converters.rs  direct_sum.rs  integration.rs  lib.rs  lib_original.rs  matrix.rs  poly.rs  relations.rs  tests.rs  to_r1cs.rs
crates/neo-ccs/tests/: ccs_property_tests.rs  commitment_gadgets.rs  commitment_opening_tests.rs  direct_sum.rs  large_ccs.rs  lib_tests.rs  poseidon2_goldilocks_tests.rs  public_equality_tests.rs  red_team.rs  red_team_me.rs
crates/neo-challenge/: Cargo.toml
crates/neo-challenge/src/: lib.rs  metrics.rs
crates/neo-challenge/tests/: red_team.rs
crates/neo-cli/: Cargo.toml
crates/neo-cli/src/: main.rs
crates/neo-closure-proof/: Cargo.toml
crates/neo-closure-proof/src/: bounded.rs  codec.rs  contract.rs  encoded.rs  explicit_backend.rs  lib.rs  opaque.rs  whir_p3_backend.rs
crates/neo-closure-proof/tests/: closure_contract_parity.rs  whir_p3_ajtai_opening_only.rs  whir_p3_ajtai_opening_plus_x.rs  whir_p3_backend_smoke.rs  whir_p3_full_closure.rs
crates/neo-diag/: Cargo.toml  README.md
crates/neo-diag/examples/: README.md  simple_r1cs_failure.json
crates/neo-diag/src/: main.rs
crates/neo-fold/: Cargo.toml
crates/neo-fold/perf-tests/: fibonacci.rs
crates/neo-fold/poseidon2-tests/: test_ic_single_step.rs
crates/neo-fold/riscv-tests/: test_riscv_elf_twist_shout_output_binding.rs  test_riscv_program_full_prove_verify.rs  test_riscv_toolchain_elf_fibonacci_twist_shout_output_binding.rs
crates/neo-fold/sha256-tests/: test_single_step.rs
crates/neo-fold/src/: bridge_adapter.rs  bridge_digests.rs  eq_weights.rs  error.rs  finalize.rs  folding.rs  lib.rs  output_binding.rs  pi_ccs.rs  pi_dec.rs  pi_rlc.rs  riscv_shard.rs  session.rs  shard.rs  shard_proof_types.rs  sumcheck.rs  transcript.rs
crates/neo-fold/starstream-tests/: test_starstream_tx_valid_crosscheck.rs  test_starstream_tx_valid_mojo.rs  test_starstream_tx_valid_optimized.rs  test_starstream_tx_valid_paper_exact.rs
crates/neo-fold/tests/: algebraic_semantics_spec.rs  bridge_digests_vectors.rs  cpu_bus_semantics_fork_attack.rs  cpu_constraints_fix_vulnerabilities.rs  cpu_mem_fork_attack.rs  diagnostic_example.rs  extension_policy.rs  extension_policy_tests.rs  folding_pipeline.rs  full_folding_integration.rs  memory_adversarial_tests.rs  multi_table_shout_tests.rs  output_binding_e2e.rs  pi_ccs_tests.rs  pi_dec_range_tests.rs  pi_dec_transcript_parity.rs  pipeline.rs  range_check_lookup_tests.rs  reference_finalizer_smoke.rs  riscv_binary_proof.rs  riscv_full_proof.rs  riscv_proof_integration.rs  security_audit_tests.rs  security_validation_tests.rs  session_multifold_r1cs_crosscheck.rs  session_multifold_r1cs_mojo.rs  session_multifold_r1cs_optimized.rs  session_multifold_r1cs_paper_exact.rs  session_multifold_r1cs_paper_exact_nontrivial.rs  session_step_linking_policy.rs  shard_folding_integration.rs  shared_cpu_bus_comprehensive_attacks.rs  shared_cpu_bus_layout_consistency.rs  shared_cpu_bus_linkage.rs  shared_cpu_bus_padding_attacks.rs  spartan_integration.rs  sumcheck_tests.rs  terminal_claim_tests.rs  test_regression.rs  (+7 more)
crates/neo-fold/tests-core/: 01_unit_oracle.rs  02_row_pair_and_nonlinearity.rs  02_unit_range_decomp.rs  03_unit_eq_weights.rs  04_unit_sparse_ops.rs  05_integration_pi_ccs_k1_smoke.rs  06_integration_pi_ccs_k2_smoke.rs  07_unit_nc_constraints.rs  08_unit_eval.rs  09_unit_terminal.rs  10_unit_f_block_semantics.rs  11_oracle_option_b_semantics.rs  12_oracle_row_invariant_blocks.rs  13_export_pi_ccs_json.rs  99_minimal_zero_poly_test.rs  fixture_gen.rs  mod.rs  test_helpers.rs
crates/neo-fold/tests-general/: diagnostic_example.rs  extension_policy_tests.rs  folding_pipeline.rs  mod.rs  pi_ccs_eq_weight_tests.rs  pi_ccs_tests.rs  pi_dec_tamper_tests.rs  pi_dec_transcript_parity.rs  pipeline.rs  r1cs_eq_binding_tests.rs  security_validation_tests.rs  verify.rs
crates/neo-fold/tests-golden-vectors/: export_pi_ccs_terminal.rs  run_and_compare.rs
crates/neo-fold/tests-paper-exact/: mod.rs  oracle_self_check.rs  paper_ccs_dec_tests.rs  paper_ccs_rlc_tests.rs  paper_ccs_tests.rs
crates/neo-fold/tests-paper-vs-engine/: mod.rs
crates/neo-fold/tests-unit/: eval_gate_is_folded.rs  eval_linear_form_equality.rs  header_and_output_binding.rs  helpers.rs  input_validation_me_r.rs  mod.rs  nc_interpolation_edges.rs  round0_dump.rs  round0_engine_eval_breakdown.rs  round0_engine_totals.rs  round0_sum_matches_initial_sum.rs  round0_trace.rs  terminal_matches_running_sum.rs
crates/neo-math/: Cargo.toml
crates/neo-spartan-bridge/: Cargo.toml  README.md
crates/neo-tests/: Cargo.toml
neo-ccs/: Cargo.toml
neo-ccs/src/: ccs_sumcheck.rs  converters.rs  lib.rs  sumcheck.rs
neo-ccs/tests/: converter_tests.rs  large_ccs.rs  lib_tests.rs  sumcheck.rs  unified_fields.rs
neo-decomp/: Cargo.toml  README.md
neo-decomp/src/: lib.rs
neo-fields/: Cargo.toml  README.md
neo-fields/src/: lib.rs  spartan2_engine.rs
neo-fields/tests/: helpers.rs
neo-fold/: Cargo.toml  README.md
neo-fold/src/: fri_engine.rs  lib.rs  spartan_ivc.rs
neo-fold/tests/: compression.rs  edge_cases.rs  full_flow.rs  ivc_tests.rs  norm_scaling.rs  open_binding.rs  parsing.rs  soundness.rs  spartan_folding_tests.rs  unified.rs  verifier_chain.rs
neo-main/: Cargo.toml  README.md
neo-main/src/: main.rs
neo-main/tests/: toy_neo.rs
neo-poly/: Cargo.toml  README.md
neo-poly/src/: lib.rs
neo-poly/tests/: poly.rs
(+431 files in other folders)
