[workspace]
members = [
    "neo-main",
    "neo-fields",
    "neo-poly",
    "neo-modint",
    "neo-ring",
    "neo-decomp",
    "neo-commit",
    "neo-sumcheck",
    "neo-ccs",
    "neo-fold",
    "neo-arithmetize",
    "neo-orchestrator",
    "neo-bench",
]
resolver = "2"



[package]
name = "learn-neo-lattice"
edition = { workspace = true }
version = { workspace = true }
authors = { workspace = true }

[features]
# Use real p3-fri PCS in our native path
real_fri = []
# Turn on Spartan2-based SNARK
snark_spartan2 = [
  "dep:spartan2",
  "dep:bincode", 
  "dep:bellpepper-core",
  "dep:bellpepper",
  "dep:ff",
]
# Choose which Spartan2 PCS to use:
spartan_fri = ["snark_spartan2"]     # PQ: Spartan2 + FRI
spartan_hyrax = ["snark_spartan2"]   # Legacy: Spartan2 + Hyrax (non-PQ)

# Keep PQ/native FRI as the default mode unless user opts into Spartan
default = ["real_fri"]

[dependencies]
neo-fields = { path = "neo-fields" }
neo-ccs = { path = "neo-ccs" }
neo-commit = { path = "neo-commit" }
p3-field = "0.3"
p3-matrix = { workspace = true }
rand = { workspace = true }

# Optional deps used only when snark_spartan2 is enabled
spartan2 = { git = "https://github.com/microsoft/Spartan2.git", rev = "cc21201d0d0293794ccc8ddd24903a9e570afb6e", default-features = false, optional = true }
bincode = { version = "1", optional = true }
bellpepper-core = { version = "0.4", optional = true }
bellpepper = { version = "0.4", optional = true }
ff = { version = "0.13", optional = true }

[workspace.package]
edition = "2021"
version = "0.1.0"
authors = ["Nico Arqueros <nico.arquerosr@gmail.com>"]
rust-version = "1.88"

[workspace.dependencies]
# Core dependencies
rand = "0.9"
rand_chacha = "0.9"
rand_distr = "0.5"
hex = "0.4"

# Plonky3 field and matrix operations (NARK mode - core functionality only)
p3-goldilocks = { version = "0.3.0", default-features = false }
p3-matrix = "0.3.0"
p3-field = "0.3.0"
p3-symmetric = "0.3.0"   # Poseidon2 hashing for Fiat-Shamir

# Benchmarking and testing dependencies
criterion = { version = "0.5.1", features = ["html_reports"] }
rayon = "1.10"

# Additional p3 crates for benchmarks and PCS
p3-challenger = "0.3.0"  # Used in benchmarks
p3-fri = "0.3.0"         # FRI PCS for interim succinctness
p3-poseidon2 = "0.3.0"   # Hash function for FRI
p3-commit = "0.3.0"      # Commitment schemes for p3-fri
p3-merkle-tree = "0.3.0" # Merkle tree MMCS for p3-fri
p3-dft = "0.3.0"         # DFT operations for p3-fri

# memchr is used by snark/mod.rs when snark_spartan2 is on
memchr = "2.7"

# SNARK mode: Spartan2 dependencies for succinctness (moved to individual crates)
# spartan2, bincode, bellpepper-core, bellpepper, ff are now optional per-crate dependencies

[workspace.lints.clippy]
uninlined_format_args = "allow"

[workspace.metadata.clippy]
all-targets = true
all-features = true

[dev-dependencies]
criterion = { workspace = true }
neo-commit = { path = "neo-commit" }
neo-ccs = { path = "neo-ccs" }
neo-fold = { path = "neo-fold" }
neo-fields = { path = "neo-fields" }
neo-decomp = { path = "neo-decomp" }
neo-ring = { path = "neo-ring" }
neo-modint = { path = "neo-modint" }
p3-matrix = { workspace = true }
rand = { workspace = true }
p3-field = "0.3"

[[bench]]
name = "folding"
harness = false
