[workspace]
members = [
  "crates/neo-params", 
  "crates/neo-math", 
  # Core supporting crates
  "neo-poly",
  "neo-modint", 
  "neo-decomp",
  # Implementation crates
  "crates/neo-ajtai",
  "crates/neo-ccs",
  # Temporarily disabled while fixing dependencies
  # "crates/neo-challenge", 
  # "crates/neo-fold",
  # "crates/neo-spartan-bridge", 
  # "crates/neo-tests",
  # Legacy crates (for reference during migration)
  # "crates/neo-sumcheck-legacy",
  # "crates/neo-ring-legacy", 
  # "crates/neo-commit-legacy",
  # Other existing crates (temporarily disabled)
  # "neo-main",
  # "neo-arithmetize",
  # "neo-orchestrator",
  # "neo-bench",
]
resolver = "2"

[workspace.dependencies]
# Core dependencies
rand = "0.8"
rand_chacha = "0.9"
rand_distr = "0.5"
serde = { version = "1", features = ["derive"] }
thiserror = "1.0"
subtle = "2.5"
rayon = "1.8"

# Plonky3 field and matrix operations
p3-field = "0.3.0"
p3-goldilocks = { version = "0.3.0", default-features = false }
p3-matrix = "0.3.0"
p3-symmetric = "0.3.0"   # Poseidon2 hashing for Fiat-Shamir
p3-poseidon2 = "0.3.0"
p3-challenger = "0.3.0"
p3-commit = "0.3.0"
byteorder = "1.5"

# Benchmarking and testing
criterion = { version = "0.5.1", features = ["html_reports"] }
proptest = "1.0"

# Spartan2 integration (optional)
spartan2 = { git = "https://github.com/microsoft/Spartan2.git", rev = "cc21201d0d0293794ccc8ddd24903a9e570afb6e", default-features = false }
bellpepper-core = { version = "0.4" }
ff = { version = "0.13" }

[profile.dev]
opt-level = 1
incremental = true

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"

[workspace.package]
edition = "2021"
version = "0.1.0"
authors = ["Nico Arqueros <nico.arquerosr@gmail.com>"]
rust-version = "1.88"

# Legacy package (will be removed)
[package]
name = "learn-neo-lattice"
edition = { workspace = true }
version = { workspace = true }
authors = { workspace = true }

[features]
default = []

[dependencies]
# Will be replaced with new crate structure