[package]
name = "benchmarks"
version = "0.1.0"
edition = "2021"
authors = ["Nico Arqueros <nico.arquerosr@gmail.com>"]

# Neo benchmarks focus on core performance with native Goldilocks field
# For hash-based proofs, consider SNARK-friendly hashes like Poseidon over Goldilocks

[features]
default = []
arkworks = [
  "dep:ark-crypto-primitives",
  "dep:ark-r1cs-std", 
  "dep:ark-relations",
  "dep:ark-ff",
  "dep:ark-std",
]

[[bin]]
name = "fib_benchmark"
path = "src/bin/fib_benchmark.rs"

[[bin]]
name = "sha256_ark_preimage_benchmark"
path = "src/bin/sha256_proper_benchmark.rs"
required-features = ["arkworks"]

[dependencies]
# Neo dependencies from local path
neo = { path = "../crates/neo" }
neo-ccs = { path = "../crates/neo-ccs" }
neo-math = { path = "../crates/neo-math" }

# Core dependencies (matching the workspace)
anyhow = "1.0"
p3-field = "0.3"
# p3-goldilocks removed - not directly used in benchmarks

# Benchmarking and utilities
criterion = { version = "0.6", features = ["html_reports"] }
sha2 = "0.10"
hex = "0.4"

# Arkworks dependencies for proper cryptographic circuits (v0.5 for fixed field size constraints)
ark-crypto-primitives = { version = "0.5", optional = true, default-features = false, features = ["std", "r1cs", "crh"] }
ark-r1cs-std         = { version = "0.5", optional = true, default-features = false, features = ["std"] }
ark-relations        = { version = "0.5", optional = true, default-features = false, features = ["std"] }
ark-ff               = { version = "0.5", optional = true, default-features = false, features = ["std"] }
ark-std              = { version = "0.5", optional = true, default-features = false, features = ["std"] }

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 1
incremental = true

[profile.bench]
debug = false
lto = "thin"
codegen-units = 1

[[bench]]
name = "neo_benchmarks"
harness = false
path = "benches/neo_benchmarks.rs"