[package]
name = "neo-fold"
edition = { workspace = true }
version = { workspace = true }
authors = { workspace = true }

[dependencies]
neo-fields = { path = "../neo-fields" }
neo-commit = { path = "../neo-commit" }
neo-sumcheck = { path = "../neo-sumcheck" }
neo-ccs = { path = "../neo-ccs" }
neo-modint = { path = "../neo-modint" }
neo-poly = { path = "../neo-poly" }
neo-decomp = { path = "../neo-decomp" }
neo-ring = { path = "../neo-ring" }
p3-matrix = { workspace = true }
p3-field = { version = "0.3" }
p3-commit = "0.3"
p3-poseidon2 = { workspace = true }
p3-symmetric = { workspace = true }
p3-goldilocks = { workspace = true }
byteorder = "1.5.0"
rand = { workspace = true }
rand_chacha = { workspace = true }
rand_distr = { workspace = true }
spartan2 = { git = "https://github.com/microsoft/Spartan2.git", rev = "cc21201d0d0293794ccc8ddd24903a9e570afb6e", default-features = false }
memchr = { workspace = true }
thiserror = "1"
bincode = { version = "1.3" }
bellpepper-core = { version = "0.4" }
bellpepper = { version = "0.4" }
ff = { version = "0.13" }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
criterion = { workspace = true }
rand = { workspace = true }
quickcheck = "1"
quickcheck_macros = "1"
neo-arithmetize = { path = "../neo-arithmetize" }



[[bench]]
name = "folding"
harness = false

[features]
default = []
prop-tests = []
