[package]
name = "neo-cli"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
anyhow = { workspace = true }
bincode = { workspace = true }
chrono = { workspace = true }
clap = { version = "4.5", features = ["derive"] }
rayon = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
mimalloc = { workspace = true, default-features = false }
neo = { path = "../neo" }
neo-ccs = { path = "../neo-ccs" }
neo-spartan-bridge = { path = "../neo-spartan-bridge" }
num_cpus = { workspace = true }
p3-field = { workspace = true }
