[package]
name = "neo-diag"
edition = {workspace = true}
version = {workspace = true}
authors = {workspace = true}
license = "Apache-2.0"

[[bin]]
name = "neo-diag"
path = "src/main.rs"

[dependencies]
neo-fold = { path = "../neo-fold", features = ["prove-diagnostics"] }
neo-math = { path = "../neo-math" }
neo-ccs = { path = "../neo-ccs" }
p3-field = { workspace = true }
clap = { version = "4.5", features = ["derive"] }
anyhow = { workspace = true }
serde_json = { workspace = true }
hex = "0.4"

