[package]
name = "neo-spartan-bridge"
version = { workspace = true }
edition = "2021"
authors = ["Nico Arqueros <nico.arquerosr@gmail.com>"]
description = "Bridge from Neo folding to Spartan2+FRI compression (last-mile only)"
license = "MIT OR Apache-2.0"

[dependencies]
neo-math = { path = "../neo-math" }
neo-ccs = { path = "../neo-ccs" }
thiserror = { workspace = true }
spartan2 = { workspace = true, optional = true }
bellpepper-core = { workspace = true, optional = true }
ff = { workspace = true, optional = true }

[features]
default = []
spartan2 = ["dep:spartan2", "dep:bellpepper-core", "dep:ff"]