[package]
name = "neo-spartan-bridge"
edition = { workspace = true }
version = { workspace = true }
authors = { workspace = true }
license = "Apache-2.0"

[lints]
workspace = true

[features]
default = []
# Enable verbose logging for debugging
debug-logs = ["neo-reductions/debug-logs"]
# Enables WHIR-backed closure proof backends in `neo-closure-proof` (used by BridgeProofV2 tests).
whir-p3-backend = ["neo-closure-proof/whir-p3-backend"]
# Dev-only: allow WHIR closure backends to serialize obligations in the payload.
whir-p3-obligations-public = ["neo-closure-proof/whir-p3-obligations-public"]
# Development profile for WHIR backends in `neo-closure-proof` (faster, lower security).
whir-p3-dev = ["neo-closure-proof/whir-p3-dev"]

[dependencies]
# Neo dependencies
neo-math = { path = "../neo-math" }
neo-ajtai = { path = "../neo-ajtai" }
neo-ccs = { path = "../neo-ccs" }
neo-params = { path = "../neo-params" }
neo-reductions = { path = "../neo-reductions" }
neo-fold = { path = "../neo-fold" }
neo-memory = { path = "../neo-memory" }
neo-transcript = { path = "../neo-transcript" }
neo-closure-proof = { path = "../neo-closure-proof" }

# Spartan2 and circuit dependencies
spartan2 = { workspace = true }
bellpepper-core = { workspace = true }
ff = { workspace = true }

# Plonky3 dependencies
p3-field = { workspace = true }
p3-goldilocks = { workspace = true }
p3-poseidon2 = { workspace = true }
p3-symmetric = { workspace = true }

# Utilities
rand = { workspace = true }
rand_chacha = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
blake3 = { workspace = true }
once_cell = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
neo-vm-trace = { path = "../neo-vm-trace" }
