[package]
name = "neo-tests"
version = "0.1.0"
edition = "2021"
authors = ["Nico Arqueros <nico.arquerosr@gmail.com>"]
description = "Property tests and integration tests for Nightstream protocol"
license = "Apache-2.0"

[[bin]]
name = "neo-demo"
path = "src/main.rs"

[dependencies]
neo = { path = "../neo" }
neo-params = { path = "../neo-params" }
neo-math = { path = "../neo-math" }
neo-ajtai = { path = "../neo-ajtai" }
neo-challenge = { path = "../neo-challenge" }
neo-ccs = { path = "../neo-ccs" }
neo-fold = { path = "../neo-fold" }
neo-spartan-bridge = { path = "../neo-spartan-bridge" }
rand = { workspace = true }
anyhow = { workspace = true }
p3-goldilocks = { workspace = true }
p3-field = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true }
